AX: Regression (r126369) - toggle buttons no longer return accessible titles https://bugs.webkit.org/show_bug.cgi?id=94858

Patch by Alejandro Piñeiro <apinheiro@igalia.com> on 2012-09-17
Reviewed by Chris Fleizach.

Source/WebCore:

After the addition of the ToggleButtonRole some logic broke because some parts
of the code were assuming/waiting for a ButtonRole

Test: platform/gtk/accessibility/aria-toggle-button-with-title.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isImageButton): using
isButton instead of a ButtonRole comparison
(WebCore::AccessibilityNodeObject::isPressed): using isButton
instead of a ButtonRole comparison
(WebCore::AccessibilityNodeObject::actionElement):
ToggleButtonRole also contemplated in order to call or not toElement
(WebCore::AccessibilityNodeObject::title): ToggleButtonRole also
contemplated in order to call or not textUnderElement
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::actionVerb): buttonAction also
assigned to ToggleButtonRole
(WebCore::AccessibilityObject::isButton): isButton now returns
that an object is a button if it is a ButtonRole, a
PopUpButtonRole or a ToggleButtonRole
* accessibility/AccessibilityObject.h:
(AccessibilityObject): isButton is now implemented on the .c file
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::actionVerb): ToggleButtonRole
also returns a buttonAction

LayoutTests:

Added a test to verify that a toggle button exposes the title.

* accessibility/aria-toggle-button-with-title.html: Added.
* platform/chromium/accessibility/aria-toggle-button-with-title-expected.txt: Added.
* platform/gtk/accessibility/aria-toggle-button-with-title-expected.txt: Added.
* platform/mac/accessibility/aria-toggle-button-with-title-expected.txt: Added.

Canonical link: https://commits.webkit.org/114822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128748 268f45cc-cd09-0410-ab3c-d52691b4dbfc